# mesa

./: .env.example  .gitignore  CONVERSATIONAL.md  README.md  SCREENING_STRATEGY.md  crontab.example  mesa-bot.service  positions.json  pyproject.toml  run-bot.sh  setup-morning-cron.sh
mesa/: cli.py  config.py  conversational.py  market.py  market_data.py  models.py  morning_brief.py  prospector.py  scoring.py  telegram_send.py  universe.py  watchdog.py  webhook.py
